quick-container/src/main/k3s/ingress/nginx-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-b
  name: web-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-b
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-b
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
status: {}
