quick-container/src/main/k3s/ingress/nginx-service-a.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service-a
  name: app-service-a
spec:
  ports:
  - name: 
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-a
