quick-container/src/main/k3s/ingress/nginx-service-b.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service-b
  name: app-service-b
spec:
  ports:
  - name: 
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-b
