quick-container/src/main/k3s/ingress/nginx-ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: app-ingress-a
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-service-a # 链接的是上面svc的名字
              port:
                number: 80
